--- a/DiandianIOS/DiandianIOS/DAMyLoginViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAMyLoginViewController.xib
@@ -59,6 +59,9 @@
                     <state key="normal" title="取消">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="closePopup:" destination="-1" eventType="touchUpInside" id="yUD-BD-oCt"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oTD-4L-4dx">
                     <rect key="frame" x="192" y="270" width="30" height="30"/>
@@ -66,6 +69,9 @@
                     <state key="normal" title="开台">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="startTable:" destination="-1" eventType="touchUpInside" id="1Mi-c5-zI3"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3nm-1D-0Pf">
                     <rect key="frame" x="281" y="270" width="30" height="30"/>
